--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <a href="https://twitter.com/chctlay" class="fa-brands fa-twitter" alt="Twitter" target="_blank"></a>
                 <a href="https://instagram.com/chctlay" class="fa-brands fa-instagram" alt="Instagram" target="_blank"></a>
                 <a href="https://www.patreon.com/laymoth" class="fa-brands fa-patreon" alt="Patreon" target="_blank"></a>
+                <a rel="me" href="https://mastodon.social/@laymoth" class="fa-brands fa-mastodon" alt="Mastodon" target="_blank"></a>
             </div>
             <div id="links">
                 <nav>
