Blog is available now

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         Moezee
                         <span></span><span></span><span></span><span></span>
                       </li>
-                      <li onclick="location.href='#';">
-                        Blog (Soon)
+                      <li onclick="location.href='https://laymoth.github.io/posts/';">
+                        Blog
                         <span></span><span></span><span></span><span></span>
                       </li>
                       <li onclick="location.href='https://laymoth.github.io/yaylib/';">
